# Ledgera

./: .gitignore  LICENSE  NOTICE  README.md
code/: Cargo.toml  Makefile  clippy.toml
code/crates/app_string_concat/: Cargo.toml
code/crates/app_string_concat/src/: doc.rs  lat_binding.rs  lib.rs
code/crates/app_string_concat_test/: Cargo.toml  README.md  launch_demo.py  launch_test.py
code/crates/app_string_concat_tui/: Cargo.toml
code/crates/app_string_concat_tui/src/: lib.rs  parser.rs  printer.rs
code/crates/app_varkeep/: Cargo.toml
code/crates/app_varkeep/src/: lat_binding.rs
code/crates/app_varkeep/src/service_client_logic/: mod.rs  role.rs  runtime_io.rs  service_client_state.rs  user_reqs.rs
code/crates/app_varkeep/src/service_client_logic/behavior/: mod.rs  react_to_core.rs  react_to_peer.rs  react_to_user.rs
code/crates/app_varkeep/src/service_client_logic/service_msgs/: messages.rs  mod.rs  topics.rs
code/crates/app_varkeep_test/: .gitignore  Cargo.toml  launch_test.py
code/crates/app_varkeep_tui/: Cargo.toml
code/crates/app_varkeep_tui/src/: behavior.rs  lib.rs  setup.rs
code/crates/app_varkeep_tui/src/commands/: mod.rs  parse_command.rs  tui_commands.rs
code/crates/blank_app_template/: Cargo.toml
code/crates/blank_app_template/src/: lat_binding.rs  lib.rs
code/crates/blank_app_template/src/service_client_logic/: mod.rs  role.rs  runtime_io.rs  service_client_state.rs  user_reqs.rs
code/crates/blank_app_template/src/service_client_logic/behavior/: mod.rs  react_to_core.rs  react_to_peer.rs  react_to_user.rs
code/crates/blank_app_template/src/service_client_logic/service_msgs/: messages.rs  topics.rs
code/crates/blank_app_template_test/: Cargo.toml  launch_test.py
code/crates/blank_app_template_tui/: Cargo.toml
code/crates/blank_app_template_tui/src/: behavior.rs  lib.rs  setup.rs
code/crates/blank_app_template_tui/src/commands/: parse_command.rs  tui_commands.rs
code/crates/comms/: Cargo.toml
code/crates/comms/src/: comm_api.rs  comm_session.rs  error.rs  lib.rs
code/crates/comms_zenoh/: Cargo.toml  README.md
code/crates/comms_zenoh/src/: backend.rs  error.rs  lib.rs
code/crates/core_logic/: Cargo.toml  README.md
code/crates/core_logic/src/: access_control.rs  lib.rs  quorum.rs  roles.rs  topics.rs
code/crates/core_logic/src/queries/: mod.rs  query_audit.rs  query_data.rs
code/crates/knowledge_representation/: Cargo.toml
code/crates/knowledge_representation/src/: json.rs  know.rs  lib.rs  per_data.rs  per_function_instance.rs  print_graph.rs  printer.rs  update.rs
code/crates/knowledge_representation/src/print_graph_v3/: layout.rs  main_graph.rs  mod.rs  svg.rs
code/crates/macros/: Cargo.toml
code/crates/macros/src/: computation.rs  data.rs  error.rs  lib.rs  predicate.rs  service.rs  service_msg.rs  service_topics.rs  tag.rs
code/crates/node/: Cargo.toml
code/crates/node/src/: lib.rs  node.rs
code/crates/node_client/: Cargo.toml
code/crates/node_client/src/: lib.rs
code/crates/node_client/src/client_logic/: client_behavior.rs  client_state.rs  handle_core_msgs.rs  mod.rs
code/crates/node_client/src/comms/: feedback_from_core_client.rs  mod.rs
code/crates/node_client/src/io/: mod.rs  parser.rs
code/crates/node_client/src/runtime/: action_audit_log.rs  action_compute.rs  action_propose_input.rs  action_retrieve_data.rs  error.rs  mod.rs  runtime_io.rs
code/crates/node_logger/: Cargo.toml
code/crates/node_logger/src/: centralized_log.rs  lib.rs  orderer_node_state.rs  valid_history.rs
code/crates/node_store/: Cargo.toml
code/crates/node_store/src/: lib.rs  storage_node_state.rs
code/crates/node_voter/: Cargo.toml
code/crates/node_voter/src/: behavior.rs  lib.rs
code/crates/node_voter/src/data/: mod.rs  per_value_voter_data_state.rs  voter_data.rs
code/crates/node_voter/src/logic/: instance_logic.rs  mod.rs  outputs.rs  phase1_access_control.rs  phase1_inputs_storage.rs  phase2_unknowns_collection.rs  phase3_computation.rs  phase4_output_storage.rs  storage_logic.rs
code/crates/node_voter/src/logic/phase2/: mod.rs  placement.rs  utils.rs
code/crates/node_voter/src/management/: channels.rs  error.rs  mod.rs  subscription.rs
code/crates/pki/: Cargo.toml  README.md
code/crates/pki/src/: error.rs  lib.rs  manager.rs  message.rs  quorum.rs  tests.rs
code/crates/pki/src/backends/: mod.rs
code/crates/pki/src/backends/dalek_backend/: implem.rs  mod.rs  tests.rs
code/crates/types/: Cargo.toml  README.md
code/crates/types/src/: digest.rs  error.rs  lib.rs  traits.rs  transactions.rs
code/crates/types/src/app_template/: identifier.rs  input.rs  mod.rs  operation.rs  predicates.rs  spec.rs  template.rs
code/crates/types/src/messages/: deliver.rs  mod.rs  nres.rs  qaud.rs  qval.rs  raud.rs  rval.rs
code/crates/types/src/pretty_printer/: mod.rs
code/crates/types/src/proofs/: mod.rs  proof_of_declaration.rs  proof_of_integrity.rs  proof_of_storage.rs  proof_of_unknown_arguments_assignment_verification.rs
code/crates/types/src/requests/: mod.rs  rfun.rs  rin.rs  rsto.rs
code/crates/types/src/votes/: mod.rs  vfun.rs  vins.rs  vout.rs  vsto.rs
code/crates/util_basic_demo/: Cargo.toml
code/crates/util_basic_demo/src/: app.rs  launch.rs  layout.rs  lib.rs  terminal.rs
code/crates/util_basic_tui/: Cargo.toml  README.md
code/crates/util_basic_tui/src/: app.rs  behavior.rs  command_line.rs  doc.rs  engine.rs  help.rs  json_explorer.rs  lib.rs  logger.rs  setup.rs
code/crates/util_basic_tui/src/behaviors/: function_instance.rs  mod.rs
code/crates/util_basic_tui/src/commands/: command_text_edition.rs  manager.rs  mod.rs  parse_command.rs  tui_commands.rs
code/crates/util_basic_tui/src/commands/builtin/: mod.rs  print_graph.rs
code/crates/util_basic_tui/src/knowledge/: error.rs  mod.rs  tui_knowledge.rs
code/crates/util_basic_tui/src/rendering/: area_help.rs  area_info.rs  area_input.rs  mod.rs
code/crates/util_deployment/: Cargo.toml
code/crates/util_deployment/src/: deployment.rs  lib.rs  zenoh_config.rs
