[workspace]
resolver = "2"

members = [
  # Core 
  "crates/pki",
  "crates/types",
  "crates/comms",
  "crates/core_logic",
  "crates/node_voter",
  "crates/node_store",
  "crates/node_logger",
  "crates/node_client",
  "crates/node",
  # Optional
  "crates/knowledge_representation",
  # Macros
  "crates/macros",
  # Zenoh Backend 
  "crates/comms_zenoh",
  # Common Utils for Integration Tests 
  "crates/util_basic_tui",
  "crates/util_basic_demo",
  "crates/util_deployment",
  # String Concatenation Application 
  "crates/app_string_concat",
  "crates/app_string_concat_tui",
  "crates/app_string_concat_test",
  # Variables Bookkeeper Application 
  "crates/app_varkeep",
  "crates/app_varkeep_tui",
  "crates/app_varkeep_test",
  # Blank App Template
  "crates/blank_app_template",
  "crates/blank_app_template_tui",
  "crates/blank_app_template_test"
]

[workspace.package]
edition = "2021"
rust-version = "1.89"
version = "1.0.0"
license = "EPL-2.0"

[workspace.lints.rust]
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"

[workspace.dependencies]

# Core 
ledgera-pki         = { package = "ledgera-pki",         path = "crates/pki" }
ledgera-types       = { package = "ledgera-types",       path = "crates/types" }
ledgera-comms       = { package = "ledgera-comms",       path = "crates/comms" }
ledgera-core-logic  = { package = "ledgera-core-logic",  path = "crates/core_logic" }
ledgera-node-voter  = { package = "ledgera-node-voter",  path = "crates/node_voter" }
ledgera-node-store  = { package = "ledgera-node-store",  path = "crates/node_store" }
ledgera-node-logger = { package = "ledgera-node-logger", path = "crates/node_logger" }
ledgera-node-client = { package = "ledgera-node-client", path = "crates/node_client" }
ledgera-node        = { package = "ledgera-node",        path = "crates/node" }

# Optional 
ledgera-knowledge-representation = { package = "ledgera-knowledge-representation", path = "crates/knowledge_representation" }

# Zenoh Backend 
ledgera-comms-zenoh = { package = "ledgera-comms-zenoh", path = "crates/comms_zenoh" }

# Common Utils for Integration Tests
ledgera-util-basic-tui = { package = "ledgera-util-basic-tui", path = "crates/util_basic_tui" }
ledgera-util-basic-demo = { package = "ledgera-util-basic-demo", path = "crates/util_basic_demo" }
ledgera-util-deployment = { package = "ledgera-util-deployment", path = "crates/util_deployment" }

# String Concatenation Application 
ledgera-app-string-concat = { package = "ledgera-app-string-concat", path = "crates/app_string_concat" }
ledgera-app-string-concat-tui = { package = "ledgera-app-string-concat-tui", path = "crates/app_string_concat_tui" }

# Variables Bookkeeper Application 
ledgera-app-varkeep     = { package = "ledgera-app-varkeep",     path = "crates/app_varkeep" }
ledgera-app-varkeep-tui = { package = "ledgera-app-varkeep-tui", path = "crates/app_varkeep_tui" }

# Macros
ledgera-macros = { package = "ledgera-macros", path = "crates/macros" }

# Blank App Template
ledgera-blank-app-template     = { package = "ledgera-blank-app-template",     path = "crates/blank_app_template" }
ledgera-blank-app-template-tui = { package = "ledgera-blank-app-template-tui", path = "crates/blank_app_template_tui" }

# derive helpers
derive-where = "1"

# misc
rand      = { version = "0.8.5", features = ["std_rng", "small_rng"] }
hex       = "0.4.3"
map-macro = "0.3.0"

# serialization
bincode    = "1.3.3"  # todo : migrate to wincode as bincode is no longer maintained
serde      = { version = "1.0", default-features = true }
serde_json = "1.0"

# logging & tracing
env_logger = "0.11.10"
log        = "0.4.29"
color-eyre = "0.6.5"


# tokio
tokio = { version = "1.47.1", features = ["full"] }

# async
futures = "0.3.31"

# parsing
nom = "8.0.0"


# TUI 
ratatui    = "0.30.0"
tui-logger = "0.18.2"
chrono     = "0.4.44"
crossterm  = { version = "0.29.0", features = ["event-stream"] }



# Comms Backend 
zenoh = "1.9.0"

# PKI backends 
ed25519-dalek = { version = "2.2.0", features = ["batch"] }

