[package]
name = "ledgera-app-string-concat"
description = "basic service to concatenate strings"
edition = "2021"

[dependencies]
ledgera-types       = { workspace = true }
ledgera-core-logic  = { workspace = true }
ledgera-node-client = { workspace = true }
ledgera-comms       = { workspace = true }
ledgera-pki         = { workspace = true }
ledgera-macros      = { workspace = true }
serde               = { workspace = true }
rand                = { workspace = true }
tokio               = { workspace = true }
bincode             = { workspace = true }
log                 = { workspace = true }
hex                 = { workspace = true }

# only needed by `doc.rs` (the `DocumentedCmpTying` impl)
ledgera-util-basic-tui = { workspace = true }
